# yesterwind-xyzmodem

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
demos/: README.md  bbs.py  pyproject.toml  rz.py  sz.py
src/yesterwind_xyzmodem/: __init__.py  callbacks.py  constants.py  crc.py  exceptions.py  transport.py  xmodem.py  ymodem.py  zmodem.py
src/yesterwind_xyzmodem/demos/: bbs.py  receive.py  send.py
tests/: conftest.py  test_callbacks.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_coverage_gaps3.py  test_crc.py  test_transport.py  test_xmodem.py  test_ymodem.py  test_zmodem.py
