[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yesterwind-xyzmodem"
version = "0.1.1"
description = "Pure Python 3 implementation of the X-, Y-, and Z-Modem file transfer protocols"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["xmodem", "ymodem", "zmodem", "modem", "file-transfer", "serial", "bbs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
demos = [
    "rich>=13.0",
    "textual>=0.50",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "rich>=13.0",
    "textual>=0.50",
]

[project.scripts]
yw-send = "yesterwind_xyzmodem.demos.send:main"
yw-receive = "yesterwind_xyzmodem.demos.receive:main"
yw-bbs = "yesterwind_xyzmodem.demos.bbs:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yesterwind_xyzmodem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=yesterwind_xyzmodem --cov-report=term-missing --cov-branch --cov-fail-under=100"

[tool.coverage.run]
source = ["yesterwind_xyzmodem"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]  # contextlib.suppress breaks branch coverage on Python 3.9
